2011-08-18  Dirk Eddelbuettel  <edd@debian.org>

	* man/vw.Rd: Added minimal manual page for vw() function

	* inst/test/: Copied upstream regression test input data, models and
	reference output here

	* demo/vw.R: Collected upstream tests in a demo file vw.R

	* src/accumulate.{cc,h},src/lda_core.cc: Applied dos2unix

2011-08-17  Dirk Eddelbuettel  <edd@debian.org>

	* Initial test package version 0.0.1 replicating the results of the
	upstream RunTests script using the the upstream vw binary
